force-app/main/default/objects/Pendiente_aprobaci_n__c/Pendiente_aprobaci_n__c.object-meta.xml
<CustomObject>
    <description>Detalle de descuentos (aprobados y a aprobar)</description>
    <label>Descuento a aprobar</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Descuento Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Descuentos a aprobar</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>