force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Cant_Dias_Limite_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Cant_Dias_Limite_Descuento__c</fullName>
    <formula>Producto__r.D_as_m_ximo_de_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cant Dias Limite Descuento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>