force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Cantidad_estimada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_estimada__c</fullName>
    <label>Cantidad estimada</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>