force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Descuentos_de_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>