force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <label>Comentario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>