force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Contribucion_Peso__c.field-meta.xml
<CustomField>
    <fullName>Contribucion_Peso__c</fullName>
    <formula>ROUND((Precio_con_Descuento__c - Costo__c) / Peso_Producto__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribucion Peso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>