force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Contribucion_QLI__c.field-meta.xml
<CustomField>
    <fullName>Contribucion_QLI__c</fullName>
    <label>Contribucion QLI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>