force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Costo__c.field-meta.xml
<CustomField>
    <fullName>Costo__c</fullName>
    <label>Costo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>