force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/CostoId__c.field-meta.xml
<CustomField>
    <fullName>CostoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CostoId</label>
    <referenceTo>Costo__c</referenceTo>
    <relationshipLabel>Descuentos a aprobar</relationshipLabel>
    <relationshipName>Descuentos_a_aprobar</relationshipName>
    <type>Lookup</type>
</CustomField>