force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Cotizaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Descuentos_de_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>