force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Desc_Mediocampo__c.field-meta.xml
<CustomField>
    <fullName>Desc_Mediocampo__c</fullName>
    <formula>Producto__r.Descuento_Autonomo_de_Mediocampo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desc.Mediocampo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>