force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Descripcion_Producto__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Producto__c</fullName>
    <formula>Producto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Producto</label>
    <type>Text</type>
</CustomField>