force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Descuento_Finalizado__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Finalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo auxiliar para determinar univocamente si el descuento debe seguir un proceso de aprobacion (false) o si ya no requiere mas aprobados (true)</description>
    <label>Descuento Finalizado</label>
    <type>Checkbox</type>
</CustomField>