force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Descuento_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Solicitado__c</fullName>
    <label>Descuento Solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>