force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>IF(
    Descuento_Solicitado__c &gt; Desc_Mediocampo__c,
    IF(
        OR(
            ISPICKVAL(Estado_mediocampo__c, &quot;Rechazado&quot;),
            ISPICKVAL(Estado_Subgerente__c, &quot;Rechazado&quot;)
        ),
        &quot;Rechazado&quot;,
        IF(
            AND(
                ISPICKVAL(Estado_mediocampo__c, &quot;Aprobado&quot;),
                ISPICKVAL(Estado_Subgerente__c, &quot;Aprobado&quot;)
            ),
            &quot;Aprobado&quot;,
            &quot;Pendiente&quot;
        )
    ),
    IF(
        ISPICKVAL(Estado_mediocampo__c, &quot;Rechazado&quot;),
        &quot;Rechazado&quot;,
        IF(
            ISPICKVAL(Estado_mediocampo__c, &quot;Aprobado&quot;),
            &quot;Aprobado&quot;,
            &quot;Pendiente&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>