force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Estado_mediocampo__c.field-meta.xml
<CustomField>
    <fullName>Estado_mediocampo__c</fullName>
    <label>Estado (Mediocampo)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>