force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Fecha_l_mite_descuento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_l_mite_descuento__c</fullName>
    <formula>Producto__r.Fecha_maxima_de_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha límite descuento</label>
    <type>Date</type>
</CustomField>