force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/FechaHora_Mediocampo__c.field-meta.xml
<CustomField>
    <fullName>FechaHora_Mediocampo__c</fullName>
    <label>FechaHora Mediocampo</label>
    <type>DateTime</type>
</CustomField>