force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Formula_SKU__c.field-meta.xml
<CustomField>
    <fullName>Formula_SKU__c</fullName>
    <formula>Producto__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>