force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/IdQuotelineitem__c.field-meta.xml
<CustomField>
    <fullName>IdQuotelineitem__c</fullName>
    <label>IdQuotelineitem</label>
    <length>50</length>
    <type>Text</type>
</CustomField>