force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Margen_Producto__c.field-meta.xml
<CustomField>
    <fullName>Margen_Producto__c</fullName>
    <formula>(( Precio_con_Descuento__c -  Costo__c ) /  Precio_con_Descuento__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>