force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Margen_QLI__c.field-meta.xml
<CustomField>
    <fullName>Margen_QLI__c</fullName>
    <label>Margen QLI</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>