force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Nombre_Mediocampo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Mediocampo__c</fullName>
    <label>Nombre Mediocampo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>