force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Nombre_Subgerente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Subgerente__c</fullName>
    <label>Nombre Subgerente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>