force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Nro_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Nro_Solicitud__c</fullName>
    <label>Nro Solicitud</label>
    <length>8</length>
    <type>Text</type>
</CustomField>