force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Descuentos_de_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>