force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Peso_Producto__c.field-meta.xml
<CustomField>
    <fullName>Peso_Producto__c</fullName>
    <formula>Producto__r.Peso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso Producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>