force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Precio_Lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lista__c</fullName>
    <label>Precio Lista</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>