force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/PrecioID__c.field-meta.xml
<CustomField>
    <fullName>PrecioID__c</fullName>
    <label>PrecioID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>