force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Descuentos_de_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>