force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/Solicitado_por__c.field-meta.xml
<CustomField>
    <fullName>Solicitado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitado por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Descuentos_de_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>