force-app/main/default/objects/Pendiente_aprobaci_n__c/fields/UMV__c.field-meta.xml
<CustomField>
    <fullName>UMV__c</fullName>
    <formula>Producto__r.TextoUMV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UMV</label>
    <type>Text</type>
</CustomField>