force-app/main/default/objects/Pendiente_aprobaci_n__c/listViews/DescuentosAAprobarSinOwner_Pendiente_aprobaci_n.listView-meta.xml
<ListView>
    <fullName>DescuentosAAprobarSinOwner_Pendiente_aprobaci_n</fullName>
    <columns>NAME</columns>
    <columns>Nro_Solicitud__c</columns>
    <columns>Cotizaci_n__c</columns>
    <columns>Estado__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Queue</filterScope>
    <label>Descuentos Procesados</label>
    <queue>DescuentosAAprobarSinOwner</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>