force-app/main/default/objects/Pendiente_aprobaci_n__c/listViews/Mis_descuentos_pendientes.listView-meta.xml
<ListView>
    <fullName>Mis_descuentos_pendientes</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Producto__c</columns>
    <columns>Cantidad_estimada__c</columns>
    <columns>Descuento_Solicitado__c</columns>
    <columns>Desc_Aut_nomo__c</columns>
    <columns>Desc_Mediocampo__c</columns>
    <columns>Solicitado_por__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado_Subgerente__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </filters>
    <label>Mis descuentos pendientes</label>
</ListView>